# tabra

./: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml
.claude/: settings.json
.claude/agents/: fix-analyzer.md  fix-coder.md  intuitive-tester.md  stata-dev.md  verify-reporter.md  verify-runner.md
.claude/skills/fix-from-report/: SKILL.md
.claude/skills/intuitive-test/: SKILL.md
.claude/skills/learn-stata-command/: SKILL.md
.claude/skills/verify-command/: SKILL.md
.github/workflows/: publish.yml
scripts/: download_data.py  fetch_ado.py
src/tabra/: __init__.py
src/tabra/api/: __init__.py
src/tabra/core/: about.py  config.py  data.py  data_ops.py  errors.py  est_accessor.py
src/tabra/io/: export.py  importers.py
src/tabra/models/: __init__.py
src/tabra/ops/: __init__.py  linalg.py  stats.py
tests/: auto_data.py  conftest.py  smoke_test.py  test_about.py  test_api.py  test_binary_choice.py  test_coefplot.py  test_count.py  test_data_ops.py  test_est_accessor.py  test_estimate_base_stats.py  test_glm.py  test_heatmap.py  test_heckman.py  test_iv.py  test_iv2.py  test_ivprobit.py  test_ivreghdfe.py  test_ivtobit.py  test_kdensity.py  test_kp_stats.py  test_mlogit.py  test_ols.py  test_ols_result.py  test_ordered_choice.py  test_panel.py  test_plot.py  test_plot_annotations.py  test_plot_box.py  test_plot_econ_templates.py  test_plot_lfit.py  test_plot_mix.py  test_qreg.py  test_reghdfe.py  test_result_misc.py  test_rvfplot.py  test_save.py  test_summarize.py  test_tobit.py  test_utils_var.py
tests/ops/: test_linalg.py  test_stats.py
(+54 files in other folders)
